<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/button1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textTemperatureTag"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"  
            android:gravity="left"
            android:text="@string/temperatureTag"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"               
            android:gravity="left"
            android:text=""
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textHumidityTag"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"  
            android:gravity="left"
            android:text="@string/humidityTag"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"               
            android:gravity="left"
            android:text=""
            android:textSize="20sp" />
        
    </LinearLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <TextView
        android:id="@+id/textNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/buttonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:text="@string/read" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>