<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text="@string/receivedText"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/receivedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text=""
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/longReceivedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" /> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text="@string/sentText"
            android:textSize="16sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        
        <EditText
	    		android:id="@+id/sentText"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:maxLength="20"
	            android:gravity="left"
	            android:text=""
	            android:textSize="20sp" />  
    </LinearLayout>

    <TextView
        android:id="@+id/longTextReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/textNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        tools:ignore="ButtonStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/buttonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:text="@string/read" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:text="@string/send" />
        
        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:text="@string/reset" />
    </LinearLayout>

</LinearLayout>